--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/auth": "^1.7.4",
+    "@measured/puck": "^0.15.0",
     "@next/third-parties": "^14.1.0",
+    "axios": "^1.7.2",
+    "firebase": "^10.12.2",
     "html-react-parser": "^5.1.10",
     "next": "^14.1.0",
     "next-seo": "^6.5.0",
@@ -18,10 +22,12 @@
     "react": "^18.2.0",
     "react-countup": "^6.5.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
     "react-icons": "^5.0.1",
     "react-responsive-carousel": "^3.2.23",
     "react-scroll-trigger": "^0.6.14",
     "react-slick": "^0.30.1",
+    "react-top-loading-bar": "^2.3.1",
     "slick-carousel": "^1.8.1",
     "strip-ansi": "^7.1.0"
   },
